--- a/pream/FilterSettingView/FilterSetting.storyboard
+++ b/pream/FilterSettingView/FilterSetting.storyboard
@@ -218,7 +218,7 @@ to apply your filter</string>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pdq-mh-8GS">
-                                <rect key="frame" x="0.0" y="456" width="375" height="211"/>
+                                <rect key="frame" x="0.0" y="956" width="375" height="211"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEi-k8-SnC">
                                         <rect key="frame" x="166.5" y="165.5" width="42" height="21"/>
@@ -280,7 +280,7 @@ to apply your filter</string>
                             <constraint firstItem="6ic-aw-AhE" firstAttribute="top" secondItem="sQf-he-Yf3" secondAttribute="bottom" id="ojX-52-rui"/>
                             <constraint firstItem="2Jo-tp-ULQ" firstAttribute="bottom" secondItem="6ic-aw-AhE" secondAttribute="bottom" constant="20" id="ts5-q1-4hy"/>
                             <constraint firstAttribute="trailing" secondItem="Ylg-M8-PHr" secondAttribute="trailing" id="xlh-xM-KK3"/>
-                            <constraint firstItem="pdq-mh-8GS" firstAttribute="top" secondItem="sQf-he-Yf3" secondAttribute="top" id="xoh-TF-mF2"/>
+                            <constraint firstItem="pdq-mh-8GS" firstAttribute="top" secondItem="sQf-he-Yf3" secondAttribute="top" constant="500" id="xoh-TF-mF2"/>
                             <constraint firstItem="Ylg-M8-PHr" firstAttribute="trailing" secondItem="VBs-UY-2oz" secondAttribute="trailing" id="ySp-qB-Ubp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2Jo-tp-ULQ"/>
