--- a/pream/FilterView/FilterCollection.storyboard
+++ b/pream/FilterView/FilterCollection.storyboard
@@ -19,34 +19,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lCg-jW-RpK">
-                            <size key="itemSize" width="50" height="55"/>
+                            <size key="itemSize" width="45" height="45"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="15" minY="10" maxX="0.0" maxY="10"/>
+                            <inset key="sectionInset" minX="15" minY="15" maxX="0.0" maxY="15"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilterCollectionViewCell" id="AVQ-05-qlm" customClass="FilterCollectionViewCell" customModule="pream" customModuleProvider="target">
-                                <rect key="frame" x="15" y="10" width="50" height="55"/>
+                                <rect key="frame" x="15" y="15" width="45" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0yV-7f-dTZ">
-                                            <rect key="frame" x="0.0" y="20" width="50" height="35"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="35" id="iOW-pp-Eme"/>
+                                                <constraint firstAttribute="height" constant="45" id="iOW-pp-Eme"/>
                                             </constraints>
                                         </imageView>
                                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ek-7u-BNw" customClass="DimmedView" customModule="pream" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="55"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="55" id="DUk-Sc-eru"/>
+                                                <constraint firstAttribute="height" constant="45" id="DUk-Sc-eru"/>
                                             </constraints>
                                         </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spring" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVl-os-tGL">
-                                            <rect key="frame" x="8" y="29" width="34.5" height="15"/>
+                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spring" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVl-os-tGL">
+                                            <rect key="frame" x="5.5" y="15" width="34.5" height="15"/>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="12"/>
                                             <color key="textColor" name="grey"/>
                                             <nil key="highlightedColor"/>
@@ -54,22 +54,19 @@
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="jVl-os-tGL" secondAttribute="bottom" constant="11" id="3hn-xc-n3h"/>
                                     <constraint firstItem="0yV-7f-dTZ" firstAttribute="leading" secondItem="AVQ-05-qlm" secondAttribute="leading" id="A1r-JY-1Ce"/>
                                     <constraint firstItem="4Ek-7u-BNw" firstAttribute="top" secondItem="AVQ-05-qlm" secondAttribute="top" id="H1J-eY-WXE"/>
-                                    <constraint firstItem="0yV-7f-dTZ" firstAttribute="top" secondItem="AVQ-05-qlm" secondAttribute="top" constant="20" id="Oy1-EN-sUi"/>
+                                    <constraint firstItem="0yV-7f-dTZ" firstAttribute="top" secondItem="AVQ-05-qlm" secondAttribute="top" id="Oy1-EN-sUi"/>
                                     <constraint firstItem="jVl-os-tGL" firstAttribute="centerX" secondItem="AVQ-05-qlm" secondAttribute="centerX" id="PDa-ct-Unt"/>
                                     <constraint firstAttribute="trailing" secondItem="4Ek-7u-BNw" secondAttribute="trailing" id="Tqu-vn-erT"/>
                                     <constraint firstItem="4Ek-7u-BNw" firstAttribute="leading" secondItem="AVQ-05-qlm" secondAttribute="leading" id="VS3-l4-1cI"/>
+                                    <constraint firstItem="jVl-os-tGL" firstAttribute="centerY" secondItem="AVQ-05-qlm" secondAttribute="centerY" id="Vzg-N1-lkm"/>
                                     <constraint firstAttribute="trailing" secondItem="0yV-7f-dTZ" secondAttribute="trailing" id="dWe-FQ-K8E"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="dimmedView" destination="4Ek-7u-BNw" id="fD1-tc-9QH"/>
                                     <outlet property="filterImageView" destination="0yV-7f-dTZ" id="hhy-58-5Os"/>
                                     <outlet property="filterNameLabel" destination="jVl-os-tGL" id="2NL-hp-1Ka"/>
-                                    <outlet property="imageHeightConstraint" destination="iOW-pp-Eme" id="Sv3-Eb-hmH"/>
-                                    <outlet property="imageTopConstraint" destination="Oy1-EN-sUi" id="Wv8-Ez-Hli"/>
-                                    <outlet property="nameLabelBottomConstraint" destination="3hn-xc-n3h" id="xbB-aS-0Wt"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
